deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webgis
  labels:
    app.kubernetes.io/part-of: webgis
